# sumi

./: Cargo.toml  README.md  test_sumi.sh
src/: main.rs
src/cli/: args.rs
src/core/: app.rs
src/log/: event.rs
src/process/: runner.rs
src/web/: server.rs  ws.rs
static/: index.html
