[package]
name = "sumi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
anyhow = "1.0"
chrono = "0.4"
owo-colors = "4"
